--- a/src/index.scss
+++ b/src/index.scss
@@ -53,38 +53,11 @@ ul.d-flex {
   }
 }
 
-.card {
-  border: 1px solid #f8f8f8;
-  padding: 20px;
-  width: 220px;
-  border-radius: 40px;
-  margin-right: 30px;
-  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
 
-  &:hover {
-    box-shadow: 0px 14px 30px 0px #0000000d;
-    transform: translateY(-5px);
-  }
-
-  .favorite {
-    position: absolute;
-    cursor: pointer;
-  }
-
-  span {
-    font-size: 13px;
-    opacity: 0.5;
-    text-transform: uppercase;
-  }
-  b {
-    font-size: 13px;
-  }
-}
-
-h5 {
-  font-weight: 400;
-  font-size: 14px;
-}
+// h5 {
+//   font-weight: 400;
+//   font-size: 14px;
+// }
 
 .button {
   background: #fff;
@@ -136,7 +109,7 @@ h5 {
   .items {
     overflow: auto;
     margin-bottom: 40;
-    flex:1;
+    flex: 1;
   }
 }
 
