--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,6 @@ ul.d-flex {
   }
 }
 
-
 // h5 {
 //   font-weight: 400;
 //   font-size: 14px;
@@ -74,6 +73,15 @@ ul.d-flex {
   border: 1px solid #f3f3f3;
   border-radius: 10px;
   padding: 0 15px;
+  position: relative;
+  .clear {
+    position: absolute;
+    right: 0;
+    width: 18px;
+    height: 18px;
+    top: 13px;
+    right: 14px;
+  }
   input {
     border: 0;
     padding: 13px;
