--- a/src/index.scss
+++ b/src/index.scss
@@ -45,6 +45,7 @@ header {
 
 ul.d-flex {
   justify-content: space-between;
+  // width: 20%;
 }
 
 .content {
@@ -52,22 +53,6 @@ ul.d-flex {
     margin: 0;
   }
 }
-
-// h5 {
-//   font-weight: 400;
-//   font-size: 14px;
-// }
-
-// .button {
-//   background: #fff;
-//   // border: 1px solid #f2f2f2;
-//   border: none;
-//   box-sizing: border-box;
-//   border-radius: 8px;
-//   height: 32px;
-//   width: 32px;
-//   cursor: pointer;
-// }
 
 .search-block {
   border: 1px solid #f3f3f3;
@@ -121,6 +106,11 @@ ul.d-flex {
   }
 }
 
+.emptyCart {
+  display: flex;
+  justify-content: center;
+}
+
 .cartItem {
   border: 1px solid #f3f3f3;
   border-radius: 20px;
@@ -156,6 +146,7 @@ ul.d-flex {
 
 .cardTotalBlock {
   ul {
+    
     display: block;
     margin-bottom: 40px !important;
     li {
